--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -2,9 +2,14 @@
 server:
   port: 8080
   contextPath: /SpringBootCRUDApp
+
 ---
 spring:
   profiles: default
+  h2:
+    console:
+      enabled: true
+      path: /h2-console
 datasource:
   sampleapp:
     url: jdbc:h2:~/tmp
@@ -89,5 +94,7 @@ datasource:
       show_sql: true
       format_sql: true
       dialect: org.hibernate.dialect.MySQLDialect
+
+
 
 
